// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ThumbIndex > fires onChange when tab is clicked 1`] = `
<div>
  <div
    class="p-tabview p-component blong-thumb-index blong-thumb-index--horizontal "
  >
    <div
      class="p-tabview-nav-container"
    >
      <div
        class="p-tabview-nav-content"
        id="pr_id_3"
      >
        <ul
          class="p-tabview-nav"
          role="tablist"
        >
          <li
            class="p-unselectable-text p-tabview-selected p-highlight"
            role="presentation"
          >
            <a
              aria-controls="pr_id_3_content_0"
              aria-selected="true"
              class="p-tabview-nav-link"
              id="pr_id_3_header_0"
              role="tab"
              tabindex="0"
            >
              <span
                class="p-tabview-title"
              >
                <span
                  class="blong-thumb-index__tab-header"
                >
                  <span>
                    First
                  </span>
                </span>
              </span>
            </a>
          </li>
          <li
            class="p-unselectable-text"
            role="presentation"
          >
            <a
              aria-controls="pr_id_3_content_1"
              aria-selected="false"
              class="p-tabview-nav-link"
              id="pr_id_3_header_1"
              role="tab"
              tabindex="0"
            >
              <span
                class="p-tabview-title"
              >
                <span
                  class="blong-thumb-index__tab-header"
                >
                  <span>
                    Second
                  </span>
                </span>
              </span>
            </a>
          </li>
          <li
            class="p-tabview-ink-bar"
            style="left: 0px;"
          />
        </ul>
      </div>
    </div>
    <div
      class="p-tabview-panels"
    >
      <div
        aria-hidden="false"
        aria-labelledby="pr_id_3_header_0"
        class="p-tabview-panel"
        id="pr_id_3_content_0"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;

exports[`ThumbIndex > handles controlled activeId 1`] = `
<div>
  <div
    class="p-tabview p-component blong-thumb-index blong-thumb-index--horizontal "
  >
    <div
      class="p-tabview-nav-container"
    >
      <div
        class="p-tabview-nav-content"
        id="pr_id_5"
      >
        <ul
          class="p-tabview-nav"
          role="tablist"
        >
          <li
            class="p-unselectable-text"
            role="presentation"
          >
            <a
              aria-controls="pr_id_5_content_0"
              aria-selected="false"
              class="p-tabview-nav-link"
              id="pr_id_5_header_0"
              role="tab"
              tabindex="0"
            >
              <span
                class="p-tabview-title"
              >
                <span
                  class="blong-thumb-index__tab-header"
                >
                  <span>
                    Tab 1
                  </span>
                </span>
              </span>
            </a>
          </li>
          <li
            class="p-unselectable-text p-tabview-selected p-highlight"
            role="presentation"
          >
            <a
              aria-controls="pr_id_5_content_1"
              aria-selected="true"
              class="p-tabview-nav-link"
              id="pr_id_5_header_1"
              role="tab"
              tabindex="0"
            >
              <span
                class="p-tabview-title"
              >
                <span
                  class="blong-thumb-index__tab-header"
                >
                  <span>
                    Tab 2
                  </span>
                </span>
              </span>
            </a>
          </li>
          <li
            class="p-tabview-ink-bar"
            style="left: 0px;"
          />
        </ul>
      </div>
    </div>
    <div
      class="p-tabview-panels"
    >
      <div
        aria-hidden="false"
        aria-labelledby="pr_id_5_header_1"
        class="p-tabview-panel"
        id="pr_id_5_content_1"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;

exports[`ThumbIndex > renders empty tab set (horizontal) 1`] = `
<div>
  <div
    class="p-tabview p-component blong-thumb-index blong-thumb-index--horizontal "
  >
    <div
      class="p-tabview-nav-container"
    >
      <div
        class="p-tabview-nav-content"
        id="pr_id_1"
      >
        <ul
          class="p-tabview-nav"
          role="tablist"
        >
          <li
            class="p-tabview-ink-bar"
            style="width: 0px;"
          />
        </ul>
      </div>
    </div>
    <div
      class="p-tabview-panels"
    />
  </div>
</div>
`;

exports[`ThumbIndex > renders tab items (horizontal) 1`] = `
<div>
  <div
    class="p-tabview p-component blong-thumb-index blong-thumb-index--horizontal "
  >
    <div
      class="p-tabview-nav-container"
    >
      <div
        class="p-tabview-nav-content"
        id="pr_id_2"
      >
        <ul
          class="p-tabview-nav"
          role="tablist"
        >
          <li
            class="p-unselectable-text p-tabview-selected p-highlight"
            role="presentation"
          >
            <a
              aria-controls="pr_id_2_content_0"
              aria-selected="true"
              class="p-tabview-nav-link"
              id="pr_id_2_header_0"
              role="tab"
              tabindex="0"
            >
              <span
                class="p-tabview-title"
              >
                <span
                  class="blong-thumb-index__tab-header"
                >
                  <span>
                    A
                  </span>
                </span>
              </span>
            </a>
          </li>
          <li
            class="p-unselectable-text"
            role="presentation"
          >
            <a
              aria-controls="pr_id_2_content_1"
              aria-selected="false"
              class="p-tabview-nav-link"
              id="pr_id_2_header_1"
              role="tab"
              tabindex="0"
            >
              <span
                class="p-tabview-title"
              >
                <span
                  class="blong-thumb-index__tab-header"
                >
                  <span>
                    B
                  </span>
                </span>
              </span>
            </a>
          </li>
          <li
            class="p-unselectable-text"
            role="presentation"
          >
            <a
              aria-controls="pr_id_2_content_2"
              aria-selected="false"
              class="p-tabview-nav-link"
              id="pr_id_2_header_2"
              role="tab"
              tabindex="0"
            >
              <span
                class="p-tabview-title"
              >
                <span
                  class="blong-thumb-index__tab-header"
                >
                  <span>
                    C
                  </span>
                </span>
              </span>
            </a>
          </li>
          <li
            class="p-tabview-ink-bar"
            style="left: 0px;"
          />
        </ul>
      </div>
    </div>
    <div
      class="p-tabview-panels"
    >
      <div
        aria-hidden="false"
        aria-labelledby="pr_id_2_header_0"
        class="p-tabview-panel"
        id="pr_id_2_content_0"
        role="tabpanel"
      >
        <div>
          Content for 
          A
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ThumbIndex > renders vertical layout 1`] = `
<div>
  <div
    class="blong-thumb-index blong-thumb-index--vertical "
  >
    <nav
      class="blong-thumb-index__nav"
    >
      <div
        class="blong-thumb-index__nav-group"
      >
        <ul
          class="blong-thumb-index__nav-items"
        >
          <li
            class="blong-thumb-index__nav-item blong-thumb-index__nav-item--active"
          >
            <button
              class="blong-thumb-index__nav-btn"
              type="button"
            >
              X
            </button>
          </li>
        </ul>
      </div>
      <div
        class="blong-thumb-index__nav-group"
      >
        <ul
          class="blong-thumb-index__nav-items"
        >
          <li
            class="blong-thumb-index__nav-item "
          >
            <button
              class="blong-thumb-index__nav-btn"
              type="button"
            >
              Y
            </button>
          </li>
        </ul>
      </div>
    </nav>
    <div
      class="blong-thumb-index__content"
    >
      <div>
        X
      </div>
    </div>
  </div>
</div>
`;

exports[`ThumbIndex > renders vertical layout with group items 1`] = `
<div>
  <div
    class="blong-thumb-index blong-thumb-index--vertical "
  >
    <nav
      class="blong-thumb-index__nav"
    >
      <div
        class="blong-thumb-index__nav-group"
      >
        <button
          class="blong-thumb-index__nav-icon"
          type="button"
        >
          <i
            class="pi pi-folder"
          />
        </button>
        <ul
          class="blong-thumb-index__nav-items"
        >
          <li
            class="blong-thumb-index__nav-item blong-thumb-index__nav-item--active"
          >
            <button
              class="blong-thumb-index__nav-btn"
              type="button"
            >
              Child 1
            </button>
          </li>
          <li
            class="blong-thumb-index__nav-item "
          >
            <button
              class="blong-thumb-index__nav-btn"
              type="button"
            >
              Child 2
            </button>
          </li>
        </ul>
      </div>
    </nav>
    <div
      class="blong-thumb-index__content"
    >
      <div>
        Child 1
      </div>
    </div>
  </div>
</div>
`;

exports[`ThumbIndex > renders with bottom orientation (horizontal TabView) 1`] = `
<div>
  <div
    class="p-tabview p-component blong-thumb-index blong-thumb-index--horizontal "
  >
    <div
      class="p-tabview-nav-container"
    >
      <div
        class="p-tabview-nav-content"
        id="pr_id_4"
      >
        <ul
          class="p-tabview-nav"
          role="tablist"
        >
          <li
            class="p-unselectable-text p-tabview-selected p-highlight"
            role="presentation"
          >
            <a
              aria-controls="pr_id_4_content_0"
              aria-selected="true"
              class="p-tabview-nav-link"
              id="pr_id_4_header_0"
              role="tab"
              tabindex="0"
            >
              <span
                class="p-tabview-title"
              >
                <span
                  class="blong-thumb-index__tab-header"
                >
                  <span>
                    One
                  </span>
                </span>
              </span>
            </a>
          </li>
          <li
            class="p-unselectable-text"
            role="presentation"
          >
            <a
              aria-controls="pr_id_4_content_1"
              aria-selected="false"
              class="p-tabview-nav-link"
              id="pr_id_4_header_1"
              role="tab"
              tabindex="0"
            >
              <span
                class="p-tabview-title"
              >
                <span
                  class="blong-thumb-index__tab-header"
                >
                  <span>
                    Two
                  </span>
                </span>
              </span>
            </a>
          </li>
          <li
            class="p-tabview-ink-bar"
            style="left: 0px;"
          />
        </ul>
      </div>
    </div>
    <div
      class="p-tabview-panels"
    >
      <div
        aria-hidden="false"
        aria-labelledby="pr_id_4_header_0"
        class="p-tabview-panel"
        id="pr_id_4_content_0"
        role="tabpanel"
      >
        <span>
          One
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`ThumbIndex > renders with icons in items 1`] = `
<div>
  <div
    class="p-tabview p-component blong-thumb-index blong-thumb-index--horizontal "
  >
    <div
      class="p-tabview-nav-container"
    >
      <div
        class="p-tabview-nav-content"
        id="pr_id_6"
      >
        <ul
          class="p-tabview-nav"
          role="tablist"
        >
          <li
            class="p-unselectable-text p-tabview-selected p-highlight"
            role="presentation"
          >
            <a
              aria-controls="pr_id_6_content_0"
              aria-selected="true"
              class="p-tabview-nav-link"
              id="pr_id_6_header_0"
              role="tab"
              tabindex="0"
            >
              <span
                class="p-tabview-title"
              >
                <span
                  class="blong-thumb-index__tab-header"
                >
                  <i
                    class="pi pi-home"
                  />
                  <span>
                    Home
                  </span>
                </span>
              </span>
            </a>
          </li>
          <li
            class="p-unselectable-text"
            role="presentation"
          >
            <a
              aria-controls="pr_id_6_content_1"
              aria-selected="false"
              class="p-tabview-nav-link"
              id="pr_id_6_header_1"
              role="tab"
              tabindex="0"
            >
              <span
                class="p-tabview-title"
              >
                <span
                  class="blong-thumb-index__tab-header"
                >
                  <i
                    class="pi pi-cog"
                  />
                  <span>
                    Settings
                  </span>
                </span>
              </span>
            </a>
          </li>
          <li
            class="p-tabview-ink-bar"
            style="left: 0px;"
          />
        </ul>
      </div>
    </div>
    <div
      class="p-tabview-panels"
    >
      <div
        aria-hidden="false"
        aria-labelledby="pr_id_6_header_0"
        class="p-tabview-panel"
        id="pr_id_6_content_0"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;
